simplify user login logic

--- a/services/client/public/index.html
+++ b/services/client/public/index.html
@@ -3,6 +3,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="/vue-virtual-scroll.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <!DOCTYPE html>
 <html class=''>
